--- a/index.html
+++ b/index.html
@@ -9,6 +9,33 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="display">123213213</div>
+        <div class="row">
+            <button class="btn seven">7</button>
+            <button class="btn eight">8</button>
+            <button class="btn nine">9</button>
+            <button class="btn divideSymbol">÷</button>
+        </div>
+        <div class="row">
+            <button class="btn four">4</button>
+            <button class="btn five">5</button>
+            <button class="btn six">6</button>
+            <button class="btn multiplySymbol">x</button>
+        </div>
+        <div class="row">
+            <button class="btn one">1</button>
+            <button class="btn two">2</button>
+            <button class="btn three">3</button>
+            <button class="btn minus">-</button>
+        </div>
+        <div class="row">
+        <button class="btn dot">.</button>
+        <button class="btn zero">0</button>
+        <button class="btn equalSymbol">=</button>
+        <button class="btn plus">+</button>
+        </div>
+    </div>
 </body>
 </html>
+
