--- a/index.html
+++ b/index.html
@@ -10,30 +10,34 @@
 </head>
 <body>
     <div class="container">
-        <div class="display">123213213</div>
+        <div class="display"></div>
         <div class="row">
-            <button class="btn seven">7</button>
-            <button class="btn eight">8</button>
-            <button class="btn nine">9</button>
-            <button class="btn divideSymbol">÷</button>
+            <button class="top clear">Clear</button>
+            <button class="top backspace">⌫</button>
         </div>
         <div class="row">
-            <button class="btn four">4</button>
-            <button class="btn five">5</button>
-            <button class="btn six">6</button>
-            <button class="btn multiplySymbol">x</button>
+            <button class="btn num seven">7</button>
+            <button class="btn num eight">8</button>
+            <button class="btn num nine">9</button>
+            <button class="btn operator divideSymbol">÷</button>
         </div>
         <div class="row">
-            <button class="btn one">1</button>
-            <button class="btn two">2</button>
-            <button class="btn three">3</button>
-            <button class="btn minus">-</button>
+            <button class="btn num four">4</button>
+            <button class="btn num five">5</button>
+            <button class="btn num six">6</button>
+            <button class="btn operator multiplySymbol">x</button>
+        </div>
+        <div class="row">
+            <button class="btn num one">1</button>
+            <button class="btn num two">2</button>
+            <button class="btn num three">3</button>
+            <button class="btn operator minus">-</button>
         </div>
         <div class="row">
         <button class="btn dot">.</button>
-        <button class="btn zero">0</button>
+        <button class="btn num zero">0</button>
         <button class="btn equalSymbol">=</button>
-        <button class="btn plus">+</button>
+        <button class="btn operator plus">+</button>
         </div>
     </div>
 </body>
