Add an operations screen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="operationScreen"></div>
         <div class="display"></div>
         <div class="row">
             <button class="top clear">Clear</button>
